Wed Aug 19 23:10:11 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WriteDataContainer.cpp:

          Initial changes to support non-default PRESENTATION QoS policies:
          - Updated DataSampleHeader to support coherent groups
          - Fixed byte ordering assignment issues (referenced wrong flag)
          - Updated flag operations; refactored update_flag method to
            inlined clear_flag and set_flag methods.

Wed Aug 19 16:24:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Disabled unregister on delete in delete_datawriter; this issue
          needs to be investigated further when there is more time.

        * dds/DCPS/transport/framework/TransportFactory.h:
        * dds/DCPS/transport/framework/TransportFactory.cpp:
        * dds/DCPS/transport/framework/TransportInterface.h:

          Reverted transport interface changes.

Tue Aug 18 23:56:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:

          Changed store_instance_data return type to void; unregister
          and dispose on a non-registered instance no longer emits a
          warning.

        * dds/DCPS/PublisherImpl.cpp:

          Re-enabled autodispose for scoreboard testing.

        * dds/DCPS/transport/framework/TransportFactory.h:
        * dds/DCPS/transport/framework/TransportFactory.cpp:

          Removed single argument variant of release; no code uses
          this method and its use can cause dangerous consequences
          (i.e. reactor task referencing invalid data).

        * dds/DCPS/transport/framework/TransportInterface.h:

          Promoted detach_transport to public scope to match
          attach_transport.
