@@ -1,3 +1,10 @@
+Thu Aug 20 15:10:48 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
+
+        * tests/DCPS/LivelinessTest/subscriber.cpp:
+
+	  Changed final test condition check to reflect new (correct)
+	  instance state behavior.
+
 Wed Aug 19 23:10:11 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.cpp:
